--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Michal Špaček <skim@cpan.org>'
 build_requires:
   Cwd: 0
+  English: 0
   ExtUtils::MakeMaker: 6.42
   File::Spec::Functions: 0
   FindBin: 0
@@ -35,4 +36,4 @@ resources:
     type: git
     url: git://github.com/tupinek/Error-Pure
     web: https://github.com/tupinek/Error-Pure
-version: 0.03
+version: 0.04
