Import of SKIM/Error-Pure-0.07 from CPAN.
gitpan-cpan-distribution: Error-Pure
gitpan-cpan-version:      0.07
gitpan-cpan-path:         SKIM/Error-Pure-0.07.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,6 +23,7 @@ meta-spec:
 name: Error-Pure
 no_index:
   directory:
+    - examples
     - inc
     - t
 requires:
@@ -37,4 +38,4 @@ resources:
     type: git
     url: git://github.com/tupinek/Error-Pure
     web: https://github.com/tupinek/Error-Pure
-version: 0.06
+version: 0.07
