--- a/META.yml
+++ b/META.yml
@@ -9,6 +9,7 @@ build_requires:
   File::Spec::Functions: 0
   FindBin: 0
   Test::More: 0
+  Test::NoWarnings: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
 configure_requires:
@@ -38,4 +39,4 @@ resources:
   homepage: https://github.com/tupinek/Error-Pure
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Error-Pure
-version: 0.09
+version: 0.10
