--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Perl module for structured errors.'
 author:
-  - 'Michal Špaček <skim@cpan.org>'
+  - 'Michal Spacek <skim@cpan.org>'
 build_requires:
   Cwd: 0
   English: 0
@@ -16,7 +16,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+generated_by: 'Module::Install version 1.12'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,6 +30,7 @@ no_index:
 requires:
   Cwd: 0
   English: 0
+  Error::Pure::Output::Text: 0.17
   Exporter: 0
   List::MoreUtils: 0
   Readonly: 0
@@ -39,4 +40,4 @@ resources:
   homepage: https://github.com/tupinek/Error-Pure
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Error-Pure
-version: 0.16
+version: '0.17'
