--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ build_requires:
   ExtUtils::MakeMaker: 6.36
   File::Spec::Functions: 0
   FindBin: 0
+  IO::CaptureOutput: 1.02
   Test::More: 0
   Test::NoWarnings: 0
   Test::Pod: 0
@@ -40,4 +41,4 @@ resources:
   homepage: https://github.com/tupinek/Error-Pure
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Error-Pure
-version: '0.18'
+version: '0.19'
